# cpp-simple-game-engine

./: CMakeLists.txt  README.md
Engine/include/: Engine.hpp  GameObject.hpp  InputManager.hpp  KeyCode.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp
Engine/src/: Engine.cpp  GameObject.cpp  InputManager.cpp  ResourceManager.cpp  SceneManager.cpp
Game/include/: player.hpp  scenes.hpp
Game/src/: main.cpp  player.cpp  scenes.cpp
